# rs-tool

./: Cargo.toml  LICENSE  readme.md
src/: filesplits.rs  main.rs  reservoir.rs
