[package]
name = "rs-tool"
description = "A command-line tool to perform reservoir sampling on a file or a stream"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rweeks/rs-tool"
readme = "readme.md"
keywords = ["reservoir", "sample", "statistics", "log", "stream"]
categories = ["command-line-utilities", "text-processing", "algorithms"]

[dependencies]
fastrand = "2.1.0"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
prettytable = "0.10.0"
rayon = "1.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }